--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,43 @@
     {% include 'head/css.html' %}
 </head>
 <body>
+    <section class="bg-gradient-to-r from-violet-500 to-violet-900 h-14 p-4">
+        <nav class="flex flex-row-reverse space-x-5 pr-6">
+             <a href="#ftr" class="pr-4 text-white rounded-lg hover:bg--900">CONTACT</a>
+             <a href="ftr" class="pr-6 text-white rounded-lg hover:bg-violet-900 ">ABOUT</a>
+             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-900">PROJECTS</a>
+             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-900">HOME</a>     
+        </nav>
+     </section>
     {% block content %}
         <p>replace me</p>
     {% endblock %}
+
+    <footer id="ftr" class="py-6 px-6 flex justify-between bg-gradient-to-r from-violet-500 to-violet-900 fixed inset-x-0 bottom-0 "> 
+
+        <div class=" w-1/3 ">
+            <h2><strong>ABOUT</strong></h2>
+                <p>Joseph Odhiambo is an inspired Software developer with knowledge in Python Programming<br>
+                    Django Web Framework, TailwindCSS.<br>
+                    Studying Computer Science in Kisii Unversity, The Dream is to be good in programing<br>
+                    and ensure client needs are met as required in time. I do like playing Scrabble with friends<br>
+                    when i'm free and also read novels.
+                </p>
+        </div>
+    
+        <div class="w-1/4 ">
+            <h2><strong>CONTENT</strong></h2>
+            <ul>
+               <li><a href="#" >Blog</a></li>
+               <li><a href="#">Tools</a></li>
+            </ul>
+        </div>
+        
+        <div class="w-1/3 ">
+            <h2><strong>CONTACT</strong></h2>
+    
+        </div>
+    </footer>
+    
 </body>
 </html>
