--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
 <body>
     <section class="bg-gradient-to-r from-violet-500 to-violet-900 h-14 p-4">
         <nav class="flex flex-row-reverse space-x-5 pr-6">
-             <a href="#ftr" class="pr-4 text-white rounded-lg hover:bg--900">CONTACT</a>
-             <a href="ftr" class="pr-6 text-white rounded-lg hover:bg-violet-900 ">ABOUT</a>
-             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-900">PROJECTS</a>
-             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-900">HOME</a>     
+             <a href="#ftr" class="pr-4 text-white rounded-lg hover:bg-violet-500">CONTACT</a>
+             <a href="ftr" class="pr-6 text-white rounded-lg hover:bg-violet-500 ">ABOUT</a>
+             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-500">PROJECTS</a>
+             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-500">HOME</a>     
         </nav>
      </section>
     {% block content %}
@@ -23,12 +23,10 @@
 
         <div class=" w-1/3 ">
             <h2><strong>ABOUT</strong></h2>
-                <p>Joseph Odhiambo is an inspired Software developer with knowledge in Python Programming<br>
-                    Django Web Framework, TailwindCSS.<br>
-                    Studying Computer Science in Kisii Unversity, The Dream is to be good in programing<br>
-                    and ensure client needs are met as required in time. I do like playing Scrabble with friends<br>
-                    when i'm free and also read novels.
-                </p>
+                <p>Joseph Odhiambo is an inspired Software developer with <br> knowledge in Python Programming
+                    Django Web Framework,<br>TailwindCSS.
+                    Studying Computer Science in Kisii Unversity,<br> The Dream is to be good in programing
+                    and ensure client<br> needs are met as required in time. 
         </div>
     
         <div class="w-1/4 ">
@@ -36,6 +34,7 @@
             <ul>
                <li><a href="#" >Blog</a></li>
                <li><a href="#">Tools</a></li>
+               <li><a href="#">Testimonials</a></li>
             </ul>
         </div>
         
