--- a/templates/base.html
+++ b/templates/base.html
@@ -7,22 +7,22 @@
     {% include 'head/css.html' %}
 </head>
 <body>
-    <section class="bg-gradient-to-r from-violet-500 to-violet-900 h-14 p-4">
+    <section class="bg-gradient-to-r from-pink-500  to-blue-500 h-14 p-4">
         <nav class="flex flex-row-reverse space-x-5 pr-6">
-             <a href="#ftr" class="pr-4 text-white rounded-lg hover:bg-violet-500">CONTACT</a>
-             <a href="ftr" class="pr-6 text-white rounded-lg hover:bg-violet-500 ">ABOUT</a>
-             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-500">PROJECTS</a>
-             <a href="#" class="pr-4 text-white rounded-lg hover:bg-violet-500">HOME</a>     
+             <a href="#ftr" class="pr-4 text-white rounded-lg hover:bg-pink-500">CONTACT</a>
+             <a href="ftr" class="pr-6 text-white rounded-lg hover:bg-pink-500 ">ABOUT</a>
+             <a href="#" class="pr-4 text-white rounded-lg hover:bg-pink-400">PROJECTS</a>
+             <a href="#" class="pr-4 text-white rounded-lg hover:bg-pink-400">HOME</a>     
         </nav>
      </section>
     {% block content %}
         <p>replace me</p>
     {% endblock %}
 
-    <footer id="ftr" class="py-6 px-6 flex justify-between bg-gradient-to-r from-violet-500 to-violet-900 fixed inset-x-0 bottom-0 "> 
+    <footer id="ftr" class="py-6 px-6 flex justify-between bg-gradient-to-r from-violet-500 to-violet-900 inset-x-0 bottom-0 text-white h-full "> 
 
         <div class=" w-1/3 ">
-            <h2><strong>ABOUT</strong></h2>
+            <h2><strong>ABOUT</strong></h2> 
                 <p>Joseph Odhiambo is an inspired Software developer with <br> knowledge in Python Programming
                     Django Web Framework,<br>TailwindCSS.
                     Studying Computer Science in Kisii Unversity,<br> The Dream is to be good in programing
