--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,7 +1,17 @@
 {% extends 'base.html' %}
 
 
-{% block content %}
 
+{% block content %}
+    <div class="flex h-screen justify-center items-center flex-col">
+        <div class="w-full h-full bg-cover bg-center "
+         style="background-image: url('static/media/bg-img2.jpg');">
+            <div class="w-full h-full flex justify-center items-center bg-fuchsia-600/20 backdrop-brightness-50">
+                <span class="text-white text-4xl w-1/2 text-center">Helo World</span>
+
+            </div>
+        </div>
+    </div>
+        
 {% endblock %}
 
