Committing changes made to majorly for stylng the webpage

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -6,9 +6,15 @@
     <div class="flex h-screen justify-center items-center flex-col">
         <div class="w-full h-full bg-cover bg-center "
          style="background-image: url('static/media/bg-img2.jpg');">
-            <div class="w-full h-full flex justify-center items-center bg-fuchsia-600/20 backdrop-brightness-50">
-                <span class="text-white text-4xl w-1/2 text-center">Helo World</span>
-
+            <div class="w-full h-full flex justify-center items-center bg-gradient-to-r from-pink-300/20 to-blue-700/20 backdrop-brightness-50">
+                <span class="text-slate-200 text-base w-1/2 text-left font-mono font-medium pb-48">Hi, my name is<br>
+                    <span class="text-slate-50 text-6xl font-mono font-bold text-left capitalize">joseph odhiambo.</span><br>
+                    <span class="text-gray-400 text-4xl font-mono font-bold text-left">I develop Software Systems<br>and Web Applications.</span><br>
+                    <span class="text-gray-200 text-lg font-mono font-bold text-left">I am a software engineer specializing in building<br> things for the Web that are user-friendly to everyone.<br>Currently
+                        I am enhancing my web development skills<br> but will venture into Data Science so watch out for<br> projects in Data Science soon!
+                    </span>
+                </span>
+               
             </div>
         </div>
     </div>
