--- a/templates/base.html
+++ b/templates/base.html
@@ -7,20 +7,31 @@
     {% include 'head/css.html' %}
 </head>
 <body>
-    <section class="bg-gradient-to-r from-pink-500  to-blue-500 h-14 p-4">
-        <nav class="flex flex-row-reverse space-x-5 pr-6">
-             <a href="#ftr" class="pr-4 text-white hover:underline">CONTACT</a>
-             <a href="ftr" class="pr-6 text-white hover:underline ">ABOUT</a>
-             <a href="#" class="pr-4 text-white hover:underline">PROJECTS</a>
-             <a href="#" class="pr-4 text-white hover:underline">HOME</a>     
-        </nav>
-     </section>
+    <header class="bg-gradient-to-r from-pink-500 to-blue-500 text-white sticky top-0 z-10">
+        <section class="max-w-4xl mx-auto p-4 flex justify-between items-center">
+            <h1 class="text-3xl font-medium">💻 Coder</h1>
+            <div>
+                <button id="mobile-open-button"
+                class="text-3xl sm:hidden focus:outline-none ">
+                    &#9776;
+                </button>
+                <nav class="flex flex-row-reverse space-x-5 pr-6 sm:block hidden">
+                    <a href="#ftr" class="pr-4 text-white hover:underline">CONTACT</a>
+                    <a href="ftr" class="pr-6 text-white hover:underline ">ABOUT</a>
+                    <a href="#" class="pr-4 text-white hover:underline">PROJECTS</a>
+                    <a href="#" class="pr-4 text-white hover:underline">HOME</a>     
+                </nav>
+            </div>
+           
+       
+        </section>
+    </header>
     {% block content %}
         <p>replace me</p>
     {% endblock %}
 
-    <footer id="ftr" class="py-6 px-6 flex justify-between bg-gradient-to-r from-violet-500 to-violet-900 inset-x-0 bottom-0 text-white h-full "> 
-
+<footer id="ftr" class=" bg-gradient-to-r from-violet-500 to-violet-900 inset-x-0 bottom-0 text-white top-0 z-10 "> 
+    <section class="max-w-4xl mx-auto p-4 flex justify-between">
         <div class=" w-1/3 ">
             <h2><strong>ABOUT</strong></h2> 
                 <p>Joseph Odhiambo is an inspired Software developer with <br> knowledge in Python Programming
@@ -79,7 +90,8 @@
             </svg>
 
         </div>
-    </footer>
+    </section>
+</footer>
     
 </body>
 </html>
