--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <div class="flex h-screen justify-center items-center flex-col">
+    <div class="flex justify-center items-center flex-col">
         <div class="w-full h-full bg-cover bg-center "
          style="background-image: url('static/media/bg-img2.jpg');">
             <div class="w-full h-full flex justify-center items-center bg-gradient-to-r from-pink-300/20 to-blue-700/20 backdrop-brightness-50">
@@ -18,6 +18,13 @@
             </div>
         </div>
     </div>
-        
+<div  class="bg-gradient-to-r from-blue-500 to-pink-500 w-full h-14 p-4">
+    <h2 class="font-mono font-bold text-2xl text-white flex justify-center ">PROJECTS</h2>
+</div>
+<div class="bg-pink-400/20 w-full h-96 flex justify-center pt-20">
+    <div class="w-32 h-32 bg-slate-100 align-text-bottom">
+        <p>Password Generator</p>
+    </div>
+</div>
 {% endblock %}
 
